--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
         server: 198.54.126.157
         username: drewh@drewh.net
         password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: public_html/asl
+        server-dir: public_html/asl/
         local-dir: ./public/
